Authentication routes complete

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <title>YelpCamp</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></link>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"> </link>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"></link>
     </head>
     <body>
         <!--<nav class="navbar navbar-default">-->
@@ -39,9 +40,9 @@
                 <a class="active item" href="/index">Home</a>
 
                 <div class="right menu">
-                    <a href="/" class="item">Login</a>
-                    <a href="/" class="item">Sign Up</a>
-                    <a href="/" class="item">Log out</a>    
+                    <a href="/login" class="item">Login</a>
+                    <a href="/register" class="item">Sign Up</a>
+                    <a href="/logout" class="item">Log out</a>    
                 </div>
             </div>    
         </div>
