--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,20 +1,22 @@
 <% include ../partials/header %>
 <div class="container">
-    <div class="row">
-        <div style="width:30%;margin:25px auto;">
-            <h1>Add New Comment to <%= campground.name%></h1>
-            <form action="/index/<%= campground._id%>/comments" method="POST">
-                <div class="form-group">
-                     <input class="form-control" name="comment[author]" placeholder="author name" type="text"></input>
-                </div>
-                <div class="form-group">
-                     <input class="form-control" name="comment[text]" placeholder="comment" type="text"></input> 
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-lg  btn-block btn-primary">SUBMIT</button>
-                </div>
-            </form>
-        </div>
+    <div class="newComment">
+        <div class="row">
+            <div style="width:30%;margin:25px auto;">
+                <h1>Add New Comment to <%= campground.name%></h1>
+                <form action="/index/<%= campground._id%>/comments" method="POST">
+                    <div class="form-group">
+                         <input class="form-control" name="comment[author]" placeholder="author name" type="text"></input>
+                    </div>
+                    <div class="form-group">
+                         <input class="form-control" name="comment[text]" placeholder="comment" type="text"></input> 
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-lg  btn-block btn-primary">SUBMIT</button>
+                    </div>
+                </form>
+            </div>
+        </div>    
     </div>
 </div>
 
