--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,14 @@
-<h1>Registeration Form</h1>
+<% include ./partials/header%>
+<div class="container">
+    <div class="register">
+        <h1>Registeration Form</h1>
+    
+        <form action="/register" method="POST">
+            <input name="username" type="text" placeholder="username"></input>
+            <input name="password" type="password" placeholder="password"></input>
+            <button>REGISTER</button>
+        </form>    
+    </div>
+</div>
 
-<form action="/register" method="POST">
-    <input name="username" type="text" placeholder="username"></input>
-    <input name="password" type="password" placeholder="password"></input>
-    <button>REGISTER</button>
-</form>
+<% include ./partials/footer%>
