--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,8 +14,12 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src=<%=campgroundId.image%>></img>
                     <div class="caption-full">
+                        
                         <h4 class="text-right">$9.00 per night</h4>
-                        <h4><a href="/"><%= campgroundId.name%></a></h4>
+                        <h4 class="text-left">
+                            <p><em>Submitted  by <%= campgroundId.author.username %></em></p>
+                        </h4>
+                        <h4><a href="/index"><%= campgroundId.name%></a></h4>
                          <p><%=campgroundId.description%></p>
                     </div>
                 </div>
@@ -28,7 +32,7 @@
                  <% campgroundId.comments.forEach(function(comment){ %>
                      <div class="row">
                          <div class="col-md-12">
-                                <strong><%= comment.author%></strong>
+                                <strong><%= comment.author.username%></strong>
                                 <p><span class="pull-right">10 days ago</span></p>
                                 <p><%= comment.text%></p>        
                          </div>
