--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,10 +22,12 @@
                         <h4><a href="/index"><%= campgroundId.name%></a></h4>
                          <p><%=campgroundId.description%></p>
                          <div class="text-left">
-                            <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/edit">Edit</a>
-                            <form id="deleteForm" action="/index/<%=campgroundId._id%>?_method=DELETE" method="POST">
-                                <button class="ui inverted red button" >Delete</button>
-                            </form>
+                             <% if(currentUser && campgroundId.author.id.equals(currentUser._id)){ %>
+                                <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/edit">Edit</a>
+                                <form id="deleteForm" action="/index/<%=campgroundId._id%>?_method=DELETE" method="POST">
+                                    <button class="ui inverted red button" >Delete</button>
+                                </form> 
+                            <% } %>
                         </div>  
                     </div>
                 </div>
