--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -42,9 +42,14 @@
                          <div class="col-md-12">
                                 <strong><%= comment.author%></strong>
                                 <p><span class="pull-right">10 days ago</span></p>
-                                <p><%= comment.text%></p>        
+                                <p><%= comment.text%></p> 
+                                <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                                <form id="deleteForm" action="/index/<%=campgroundId._id%>?_method=DELETE" method="POST">
+                                    <button class="ui inverted red button" >Delete</button>
+                                </form> 
                          </div>
                      </div>
+                     <hr></hr>
                 <% }) %>
             </div>
         </div>
