--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -3,13 +3,10 @@
     <div class="newComment">
         <div class="row">
             <div style="width:30%;margin:25px auto;">
-                <h1>Add New Comment to <%= campground.name%></h1>
-                <form action="/index/<%= campground._id%>/comments" method="POST">
+                <h1>Edit <%= comment.author%>'s comment</h1>
+                <form action="/index/<%= campgroundId%>/comments/<%= comment._id%>?_method=PUT" method="POST">
                     <div class="form-group">
-                         <input class="form-control" name="comment[author]" value="<%=username%>"type="text"></input>
-                    </div>
-                    <div class="form-group">
-                         <input class="form-control" name="comment[text]" placeholder="comment" type="text"></input> 
+                         <input class="form-control" name="comment[text]" value="<%= comment.text%>" type="text"></input> 
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg  btn-block btn-primary">SUBMIT</button>
