--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,7 +17,7 @@
                         
                         <h4 class="text-right">$9.00 per night</h4>
                         <h4 class="text-left">
-                            <p><em>Submitted  by <%= campgroundId.author.username %></em></p>
+                            <p><em>Submitted  by <%= campgroundId.author.username.charAt(0).toUpperCase()+campgroundId.author.username.substring(1,campgroundId.author.username.length) %></em></p>
                         </h4>
                         <h4><a href="/index"><%= campgroundId.name%></a></h4>
                          <p><%=campgroundId.description%></p>
@@ -40,11 +40,11 @@
                  <% campgroundId.comments.forEach(function(comment){ %>
                      <div class="row">
                          <div class="col-md-12">
-                                <strong><%= comment.author%></strong>
+                                <strong><%= comment.author.username.charAt(0).toUpperCase()+comment.author.username.substring(1,comment.author.username.length)%></strong>
                                 <p><span class="pull-right">10 days ago</span></p>
                                 <p><%= comment.text%></p> 
                                 <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/comments/<%=comment._id%>/edit">Edit</a>
-                                <form id="deleteForm" action="/index/<%=campgroundId._id%>?_method=DELETE" method="POST">
+                                <form id="deleteForm" action="/index/<%=campgroundId._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                                     <button class="ui inverted red button" >Delete</button>
                                 </form> 
                          </div>
