--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -3,7 +3,7 @@
     <div class="newComment">
         <div class="row">
             <div style="width:30%;margin:25px auto;">
-                <h1>Edit <%= comment.author%>'s comment</h1>
+                <h1>Edit <%= comment.author.usernames%>'s comment</h1>
                 <form action="/index/<%= campgroundId%>/comments/<%= comment._id%>?_method=PUT" method="POST">
                     <div class="form-group">
                          <input class="form-control" name="comment[text]" value="<%= comment.text%>" type="text"></input> 
