--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -43,10 +43,12 @@
                                 <strong><%= comment.author.username.charAt(0).toUpperCase()+comment.author.username.substring(1,comment.author.username.length)%></strong>
                                 <p><span class="pull-right">10 days ago</span></p>
                                 <p><%= comment.text%></p> 
-                                <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/comments/<%=comment._id%>/edit">Edit</a>
-                                <form id="deleteForm" action="/index/<%=campgroundId._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
-                                    <button class="ui inverted red button" >Delete</button>
-                                </form> 
+                                <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                    <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                                    <form id="deleteForm" action="/index/<%=campgroundId._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                        <button class="ui inverted red button" >Delete</button>
+                                    </form> 
+                                <% } %>
                          </div>
                      </div>
                      <hr></hr>
