--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -51,3 +51,17 @@
                 </div>
             </div>    
         </div>
+        
+        <div class="container">
+            <% if(error && error.length>0){ %>
+                <div style="margin-top:50px;" class="alert alert-danger" role="alert">
+                    <%= error %>
+                </div>    
+            <% } %>
+             <% if(success && success.length>0){ %>
+                 <div style="margin-top:50px;" class="alert alert-success" role="alert">
+                    <%= success %>
+                </div>    
+            <% } %>
+        </div>
+        
