--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -11,6 +11,9 @@
                     <div class="form-group">
                          <input class="form-control" name="data[image]" value="<%= campground.image%>" type="text"></input> 
                     </div>
+                    <div class="form-group">
+                         <input class="form-control" name="data[price]" value="<%= campground.price%>" type="number" min="5" step="0.1"></input>
+                    </div>
                      <div class="form-group">
                          <input class="form-control" name="data[description]" value="<%= campground.description%>" type="text"></input> 
                     </div>
