--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -6,10 +6,13 @@
                 <h1>New CampGround</h1>
                 <form action="/index" method="POST">
                     <div class="form-group">
-                         <input class="form-control" name="placeName" placeholder="enter the place name" type="text"></input>
+                         <input class="form-control" name="placeName" placeholder="place name" type="text"></input>
                     </div>
                     <div class="form-group">
                          <input class="form-control" name="imgName" placeholder="image url" type="text"></input> 
+                    </div>
+                    <div class="form-group">
+                         <input class="form-control" name="price" placeholder="price" type="number" min="5" step="0.1"></input>
                     </div>
                      <div class="form-group">
                          <input class="form-control" name="description" placeholder="description" type="text"></input> 
