--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,7 +15,7 @@
                     <img class="img-responsive" src=<%=campgroundId.image%>></img>
                     <div class="caption-full">
                         
-                        <h4 class="text-right">$9.00 per night</h4>
+                        <h4 class="text-right">$<%=campgroundId.price%>/night</h4>
                         <h4 class="text-left">
                             <p><em>Submitted  by <%= campgroundId.author.username.charAt(0).toUpperCase()+campgroundId.author.username.substring(1,campgroundId.author.username.length) %></em></p>
                         </h4>
