--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -7,8 +7,8 @@
                     <li class="list-group-item active">Info 1</li>
                     <li class="list-group-item">Info 2</li>
                     <li class="list-group-item">Info 3</li>
-                    <li class="list-group-item">Info 4</li>
                 </div>
+                <div id="map"></div>
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
@@ -55,7 +55,35 @@
                 <% }) %>
             </div>
         </div>
-        
-       
     </div>
+    
+    <script>
+  function initMap() {
+    var lat = <%= campgroundId.lat %>;
+    var lng = <%= campgroundId.lng %>;
+    var center = {lat: lat, lng: lng };
+    var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 8,
+        center: center,
+        scrollwheel: false
+    });
+    var contentString = `
+      <strong><%= campgroundId.name %><br />
+      <%= campgroundId.location %></strong>
+      <p><%= campgroundId.description %></p>
+    `
+    var infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+    var marker = new google.maps.Marker({
+        position: center,
+        map: map
+    });
+    marker.addListener('click', function() {
+      infowindow.open(map, marker);
+    });
+  }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWSsO3N7NxFgtDVbX0NQdf1NUzvDTUoyc&callback=initMap"></script>
+
 <% include ../partials/footer %>
