--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -14,6 +14,10 @@
                     <div class="form-group">
                          <input class="form-control" name="data[price]" value="<%= campground.price%>" type="number" min="5" step="0.1"></input>
                     </div>
+                    <div class="form-group">
+                        <label for="location">Location</label>
+                        <input class="form-control" type="text" name="data[location]" id="location" value="<%= campground.location %>">
+                    </div>
                      <div class="form-group">
                          <input class="form-control" name="data[description]" value="<%= campground.description%>" type="text"></input> 
                     </div>
