--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,6 +14,10 @@
                     <div class="form-group">
                          <input class="form-control" name="price" placeholder="price" type="number" min="5" step="0.1"></input>
                     </div>
+                    <div class="form-group">
+                        <label for="location">Location</label>
+                        <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+                    </div>
                      <div class="form-group">
                          <input class="form-control" name="description" placeholder="description" type="text"></input> 
                     </div>
