Minor UI changes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,7 +15,7 @@
     margin-top:80px;
 }
 
-.register,.login,.newComment,.newCampground{
+.register,.login,.newComment,.newParkingSpot{
     margin-top:80px;
 }
 
