--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,10 +3,10 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>Welcome to YelpCamp</h1>   
-            <p>View our hand-picked campgrounds from all over the world</p>
+            <h1>Welcome to ParkingSpot</h1>   
+            <p>View all the available parking spots</p>
             <p>
-                <a class="btn btn-primary btn-large" href="/index/new">Add new CampGround</a>        
+                <a class="btn btn-primary btn-large" href="/index/new">Add new Parking Spot</a>        
             </p>
         </div>
     </header>
