--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -3,8 +3,8 @@
     <div class="newComment">
         <div class="row">
             <div style="width:30%;margin:25px auto;">
-                <h1>Add New Comment to <%= campground.name%></h1>
-                <form action="/index/<%= campground._id%>/comments" method="POST">
+                <h1>Add New Comment to <%= parking.name%></h1>
+                <form action="/index/<%= parking._id%>/comments" method="POST">
                     <div class="form-group">
                          <input class="form-control" name="comment[text]" placeholder="comment" type="text"></input> 
                     </div>
