--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,8 +34,8 @@
         <!--</nav>-->
          <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><i class="code icon"></i>
-                    My Blog
+                <div class="header item">
+                    <a href="/">Parking Spot</a>
                 </div>
                 <a class="active item" href="/index">Home</a>
 
