--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -40,22 +40,22 @@ body {
 }
 
 .slideshow li:nth-child(1) { 
-  background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+  background-image: url(https://i.pinimg.com/originals/f4/27/1e/f4271e6b8e4b47b3acfa7853125b7ac1.jpg) 
 }
 .slideshow li:nth-child(2) { 
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+  background-image: url(http://www.sustainablepals.org/upload/2018/01/20/car-parking-design-in-house-home-parking-design-l-b218e66f4b2d59e8.jpg);
   animation-delay: 10s; 
 }
 .slideshow li:nth-child(3) { 
-  background-image: url(http://i.imgur.com/emvhOnb.jpg);
+  background-image: url(http://www.stylisheve.com/wp-content/uploads/2014/12/underground-parking-13.jpg);
   animation-delay: 20s; 
 }
 .slideshow li:nth-child(4) { 
-  background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  background-image: url(https://cdn.images.express.co.uk/img/dynamic/24/590x/Parking-700617.jpg);
   animation-delay: 30s; 
 }
 .slideshow li:nth-child(5) { 
-  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  background-image: url(https://s-media-cache-ak0.pinimg.com/originals/a4/d2/d7/a4d2d78915f38e817767ea12edde5d9e.jpg);
   animation-delay: 40s; 
 }
 
