--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,11 +2,11 @@
 <div class="container">
     <div class="newCampground">
         <div class="row">
-            <div style="width:30%;margin:25px auto;">
-                <h1>New CampGround</h1>
+            <div style="width:30%;margin:75px auto;">
+                <h1>New Parking Spot</h1>
                 <form action="/index" method="POST">
                     <div class="form-group">
-                         <input class="form-control" name="placeName" placeholder="place name" type="text"></input>
+                         <input class="form-control" name="placeName" placeholder="name" type="text"></input>
                     </div>
                     <div class="form-group">
                          <input class="form-control" name="imgName" placeholder="image url" type="text"></input> 
