--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
     <div class="container" style="margin:60px auto;">
         <div class="row">
             <div class="col-md-3">
-                <p class="lead">YelpCamp</p>
+                <p class="lead">ParkingSpot</p>
                 <div class="list-group">
                     <li class="list-group-item active">Info 1</li>
                     <li class="list-group-item">Info 2</li>
@@ -12,19 +12,19 @@
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
-                    <img class="img-responsive" src=<%=campgroundId.image%>></img>
+                    <img class="img-responsive" src=<%= parking.image %>></img>
                     <div class="caption-full">
                         
-                        <h4 class="text-right">$<%=campgroundId.price%>/night</h4>
+                        <h4 class="text-right">$<%=parking.price%>/night</h4>
                         <h4 class="text-left">
-                            <p><em>Submitted  by <%= campgroundId.author.username.charAt(0).toUpperCase()+campgroundId.author.username.substring(1,campgroundId.author.username.length) %></em></p>
+                            <p><em>Submitted  by <%= parking.author.username.charAt(0).toUpperCase()+parking.author.username.substring(1,parking.author.username.length) %></em></p>
                         </h4>
-                        <h4><a href="/index"><%= campgroundId.name%></a></h4>
-                         <p><%=campgroundId.description%></p>
+                        <h4><a href="/index"><%= parking.name%></a></h4>
+                         <p><%=parking.description%></p>
                          <div class="text-left">
-                             <% if(currentUser && campgroundId.author.id.equals(currentUser._id)){ %>
-                                <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/edit">Edit</a>
-                                <form id="deleteForm" action="/index/<%=campgroundId._id%>?_method=DELETE" method="POST">
+                             <% if(currentUser && parking.author.id.equals(currentUser._id)){ %>
+                                <a class="ui inverted purple button" href="/index/<%= parking._id%>/edit">Edit</a>
+                                <form id="deleteForm" action="/index/<%=parking._id%>?_method=DELETE" method="POST">
                                     <button class="ui inverted red button" >Delete</button>
                                 </form> 
                             <% } %>
@@ -33,19 +33,19 @@
                 </div>
                 <div class="well">
                     <div class="text-right">
-                        <a class="ui inverted orange button" href="/index/<%= campgroundId._id%>/comments/new">Add Commnt</a>
+                        <a class="ui inverted orange button" href="/index/<%= parking._id%>/comments/new">Add Commnt</a>
                     </div>    
                 </div>
                 <hr></hr>
-                 <% campgroundId.comments.forEach(function(comment){ %>
+                 <% parking.comments.forEach(function(comment){ %>
                      <div class="row">
                          <div class="col-md-12">
                                 <strong><%= comment.author.username.charAt(0).toUpperCase()+comment.author.username.substring(1,comment.author.username.length)%></strong>
                                 <p><span class="pull-right">10 days ago</span></p>
                                 <p><%= comment.text%></p> 
                                 <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-                                    <a class="ui inverted purple button" href="/index/<%= campgroundId._id%>/comments/<%=comment._id%>/edit">Edit</a>
-                                    <form id="deleteForm" action="/index/<%=campgroundId._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                    <a class="ui inverted purple button" href="/index/<%= parking._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                                    <form id="deleteForm" action="/index/<%=parking._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                                         <button class="ui inverted red button" >Delete</button>
                                     </form> 
                                 <% } %>
@@ -59,8 +59,8 @@
     
     <script>
   function initMap() {
-    var lat = <%= campgroundId.lat %>;
-    var lng = <%= campgroundId.lng %>;
+    var lat = <%= parking.lat %>;
+    var lng = <%= parking.lng %>;
     var center = {lat: lat, lng: lng };
     var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 8,
@@ -68,9 +68,9 @@
         scrollwheel: false
     });
     var contentString = `
-      <strong><%= campgroundId.name %><br />
-      <%= campgroundId.location %></strong>
-      <p><%= campgroundId.description %></p>
+      <strong><%= parking.name %><br />
+      <%= parking.location %></strong>
+      <p><%= parking.description %></p>
     `
     var infowindow = new google.maps.InfoWindow({
       content: contentString
