--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,8 +22,8 @@
     </div>
     
     <div id="landing-header">
-        <h1>Welcome to YelpCamp!</h1>
-    	  	<a href="/index" class="btn btn-lg btn-success">View All Campgrounds</a>
+        <h1>Welcome to ParkingSpot!</h1>
+    	  	<a href="/index" class="btn btn-lg btn-success">View All Parking Spots</a>
     </div>
     
     <ul class="slideshow">
