Image slider for multiple images of parking spot

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -9,7 +9,13 @@
                          <input class="form-control" name="data[name]" value="<%= parking.name%>" type="text"></input>
                     </div>
                     <div class="form-group">
-                         <input class="form-control" name="data[image]" value="<%= parking.image%>" type="text"></input> 
+                         <input class="form-control" name="data[image1]" value="<%= parking.image1%>" type="text"></input> 
+                    </div>
+                    <div class="form-group">
+                         <input class="form-control" name="data[image2]" value="<%= parking.image2%>" type="text"></input> 
+                    </div>
+                    <div class="form-group">
+                         <input class="form-control" name="data[image3]" value="<%= parking.image3%>" type="text"></input> 
                     </div>
                     <div class="form-group">
                          <input class="form-control" name="data[price]" value="<%= parking.price%>" type="number" min="5" step="0.1"></input>
