--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -15,7 +15,7 @@
         <% data.forEach(function(res){ %>
             <div class="col-md-3 col-sm-6">
                  <div class="thumbnail">
-                     <img src="<%= res.image%>"></img>   
+                     <img src="<%= res.image1%>"></img>   
                      <div class="caption">
                         <h4><%= res.name %></h4> 
                      </div>
