--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -28,3 +28,10 @@
     height: 400px;
     width: 100%;
 }
+#myCarousel{
+    max-width: 100%;
+    max-height: 100%;
+     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
