--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -6,20 +6,26 @@
                 <h1>New Parking Spot</h1>
                 <form action="/index" method="POST">
                     <div class="form-group">
-                         <input class="form-control" name="placeName" placeholder="name" type="text"></input>
+                         <input class="form-control" name="placeName" placeholder="name" type="text" required></input>
                     </div>
                     <div class="form-group">
-                         <input class="form-control" name="imgName" placeholder="image url" type="text"></input> 
+                         <input class="form-control" name="imgName1" placeholder="image url" type="text" required></input> 
+                    </div>
+                     <div class="form-group">
+                         <input class="form-control" name="imgName2" placeholder="image url" type="text" required ></input> 
+                    </div>
+                     <div class="form-group">
+                         <input class="form-control" name="imgName3" placeholder="image url" type="text" required></input> 
                     </div>
                     <div class="form-group">
-                         <input class="form-control" name="price" placeholder="price" type="number" min="5" step="0.1"></input>
+                         <input class="form-control" name="price" placeholder="price" type="number" min="5" step="0.1" required></input>
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
-                        <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+                        <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA" required>
                     </div>
                      <div class="form-group">
-                         <input class="form-control" name="description" placeholder="description" type="text"></input> 
+                         <input class="form-control" name="description" placeholder="description" type="text" required></input> 
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg  btn-block btn-primary">SUBMIT</button>
