--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,7 +12,46 @@
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
-                    <img class="img-responsive" src=<%= parking.image %>></img>
+                    <!--<div class="container">-->
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                              </ol>
+                            
+                              <!-- Wrapper for slides -->
+                              <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                          <img class="img-responsive d-block w-100" src="<%= parking.image1 %>" alt="First slide"></img>
+                                          <!--<div class="carousel-caption d-none d-md-block">-->
+                                          <!--      <h3>Los Angeles</h3>-->
+                                          <!--      <p>LA is always so much fun!</p>-->
+                                          <!--</div>-->
+                                    </div>
+                                     <div class="carousel-item">
+                                          <img class="img-responsive d-block w-100" src="<%= parking.image2 %>" alt="Second slide"></img>
+                                    </div>
+                                     <div class="carousel-item">
+                                          <img class="img-responsive d-block w-100" src="<%= parking.image3 %>" alt="Third slide"></img>
+                                    </div>
+                              </div>
+                            
+                              <!-- Left and right controls -->
+                              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                        </div>
+                    <!--</div>-->
+                    
+                    
+                    
                     <div class="caption-full">
                         
                         <h4 class="text-right">$<%=parking.price%>/night</h4>
