--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,15 +14,43 @@
                      <div class="form-group">
                          <input class="form-control" name="imgName2" placeholder="image url" type="text" required ></input> 
                     </div>
-                     <div class="form-group">
+                    <div class="form-group">
                          <input class="form-control" name="imgName3" placeholder="image url" type="text" required></input> 
                     </div>
+                    
+                    <div class="form-group">
+                        <div class="form-control">
+                            <label><strong>Availablility</strong></label>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox1]" value="Monday">Monday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox2]" value="Tuesday">Tuesday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox3]" value="Wednesday">Wednesday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox4]" value="Thursday">Thursday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox5]" value="Friday">Friday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox6]" value="Saturday">Saturday
+                            </div>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox7]" value="Sunday">Sunday
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="form-group">
                          <input class="form-control" name="price" placeholder="price" type="number" min="5" step="0.1" required></input>
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
-                        <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA" required>
+                        <input class="form-control" type="text" name="location" name="location" placeholder="Yosemite National Park, CA" required>
                     </div>
                      <div class="form-group">
                          <input class="form-control" name="description" placeholder="description" type="text" required></input> 
