--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,13 +2,31 @@
     <div class="container" style="margin:60px auto;">
         <div class="row">
             <div class="col-md-3">
-                <p class="lead">ParkingSpot</p>
+                <p class="lead"><%= parking.author.username.charAt(0).toUpperCase()+parking.author.username.substring(1,parking.author.username.length) %>'s Parking Spot</p>
                 <div class="list-group">
-                    <li class="list-group-item active">Info 1</li>
-                    <li class="list-group-item">Info 2</li>
-                    <li class="list-group-item">Info 3</li>
+                    <li class="list-group-item active">Availability</strong>
+                        <ul>
+                           <% parking.availability.forEach(function(day){ %>
+                               <% if(day.inlineCheckbox1!=null) { %> <li><%=day.inlineCheckbox1%></li> <% } %>
+                               <% if(day.inlineCheckbox2!=null) { %> <li><%=day.inlineCheckbox2%></li> <% } %>
+                               <% if(day.inlineCheckbox3!=null) { %> <li><%=day.inlineCheckbox3%></li> <% } %>
+                               <% if(day.inlineCheckbox4!=null) { %> <li><%=day.inlineCheckbox4%></li> <% } %>
+                               <% if(day.inlineCheckbox5!=null) { %> <li><%=day.inlineCheckbox5%></li> <% } %>
+                               <% if(day.inlineCheckbox6!=null) { %> <li><%=day.inlineCheckbox6%></li> <% } %>
+                               <% if(day.inlineCheckbox7!=null) { %> <li><%=day.inlineCheckbox7%></li> <% } %>
+                            <% });%>
+                            
+                        </ul>
+                    </li>
+                    
+                    <li class="list-group-item"><strong>Booked dates</strong></li>
+                    <li class="list-group-item"><strong>Current availability.
+                    </strong></li>
+                    <li class="list-group-item"><strong>Map</strong>
+                        <p><div id="map"></div></p>
+                    </li>
                 </div>
-                <div id="map"></div>
+               
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
@@ -56,8 +74,12 @@
                         
                         <h4 class="text-right">$<%=parking.price%>/night</h4>
                         <h4 class="text-left">
-                            <p><em>Submitted  by <%= parking.author.username.charAt(0).toUpperCase()+parking.author.username.substring(1,parking.author.username.length) %></em></p>
+                            <strong><em>Submitted  by <%= parking.author.username.charAt(0).toUpperCase()+parking.author.username.substring(1,parking.author.username.length) %></em></strong>
+                           <p><em><%= moment(parking.createdAt).fromNow() %></em></p>
                         </h4>
+                         
+                                 
+                            
                         <h4><a href="/index"><%= parking.name%></a></h4>
                          <p><%=parking.description%></p>
                          <div class="text-left">
@@ -80,7 +102,9 @@
                      <div class="row">
                          <div class="col-md-12">
                                 <strong><%= comment.author.username.charAt(0).toUpperCase()+comment.author.username.substring(1,comment.author.username.length)%></strong>
-                                <p><span class="pull-right">10 days ago</span></p>
+                                 <p>
+                                      <em><%= moment(comment.createdAt).fromNow() %></em>
+                                </p>
                                 <p><%= comment.text%></p> 
                                 <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
                                     <a class="ui inverted purple button" href="/index/<%= parking._id%>/comments/<%=comment._id%>/edit">Edit</a>
