--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,13 +1,30 @@
+<% include ./partials/footer%>
 <% include ./partials/header%>
 <div class="container">
-    <div class="register">
-        <h1>Registeration Form</h1>
-    
-        <form action="/register" method="POST">
-            <input name="username" type="text" placeholder="username"></input>
-            <input name="password" type="password" placeholder="password"></input>
-            <button>REGISTER</button>
-        </form>    
+    <div class="newCampground">
+        <div class="row">
+            <div style="width:30%;margin:75px auto;">
+                <div class="container">
+                    <div class="login">
+                        
+                    
+                        <form action="/register" method="POST">
+                             <h1>REGISTRATION FORM</h1>
+                             <div class="form-group">
+                                 <input class="form-control" name="username" placeholder="username" type="text"></input>
+                             </div>
+                             <div class="form-group">
+                                 <input class="form-control" name="password" placeholder="password" type="password"></input>        
+                             </div>
+                             <div class="form-group">
+                                <button class="btn btn-lg  btn-block btn-primary">REGISTER</button>
+                             </div>
+                        </form>    
+                    </div>
+                    
+                </div>
+            </div>
+        </div>    
     </div>
 </div>
 
