--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -42,6 +42,12 @@
                             <div class="form-check ">
                                 <input class="form-check-input" type="checkbox" name="avail[inlineCheckbox7]" value="Sunday">Sunday
                             </div>
+                            <div class="form-control">
+                                <input class="form-control" name="startTime" placeholder="start time" type="text"  required></input>
+                            </div>
+                            <div class="form-control">
+                                <input class="form-control" name="endTime" placeholder="end time" type="text" required></input>
+                            </div>
                         </div>
                     </div>
                     
